BUG : centered cards on mobile

--- a/style.css
+++ b/style.css
@@ -386,6 +386,7 @@
   display: grid;
   grid-gap: 25px 25px;
   grid-template-columns: auto auto auto;
+  justify-content: center;
   margin-bottom: 25px;
 }
 .grid-container-bottom {
